# gaussian_job_shared

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-08-job-lifecycle-status-expand.md  2026-05-08-slurm-job-flow-structs.md
docs/superpowers/specs/: 2026-05-08-job-lifecycle-status-expand-design.md  2026-05-08-rust-python-ffi-design.md  2026-05-08-slurm-job-flow-structs-design.md
examples/: common.toml  experiment.toml  simple_job.bash
python/gaussian_job_shared/: __init__.py
python/gaussian_job_shared/_core/: __init__.pyi
python/gaussian_job_shared/_core/entities/: __init__.pyi
python/gaussian_job_shared/_core/entities/slurm/: __init__.pyi
python/gaussian_job_shared/_core/entities/workflow/: __init__.pyi
python/gaussian_job_shared/_gaussian_job_shared_core/entities/slurm/: __init__.pyi
python/gaussian_job_shared/_gaussian_job_shared_core/entities/slurm/sbatch_options/: __init__.pyi
python/gaussian_job_shared/_gaussian_job_shared_core/entities/slurm/status/: __init__.pyi
python/gaussian_job_shared/_gaussian_job_shared_core/entities/workflow/: __init__.pyi
python/tests/: test_all.py
src/: config.rs  entities.rs  error.rs  lib.rs  py_export.rs
src/config/: common.rs
src/entities/: array_spec.rs  common_config_entities.rs  job_flow.rs  jobs.rs  slurm.rs  workflow.rs
src/entities/slurm/: job.rs  resource_spec.rs  sbatch_options.rs  status.rs  time_limit.rs
src/entities/slurm/sbatch_options/: dependency.rs  resource_spec.rs
src/entities/workflow/: job.rs  status.rs
src/py_export/: bridge.rs  error.rs  mod.rs
src/py_export/entities/: job_flow.rs  mod.rs
src/py_export/entities/slurm/: array_spec.rs  config.rs  dependency.rs  job.rs  mod.rs  resource_spec.rs  sbatch_options.rs  status.rs  time_limit.rs
src/py_export/entities/slurm/sbatch_options/: array_spec.rs  config.rs  dependency.rs  resource_spec.rs  time_limit.rs
src/py_export/entities/workflow/: job.rs  mod.rs  status.rs
tests/: test_resource_spec_kwargs.py
