[project]
name = "gaussian_job_shared"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
authors = [{name="kkiyama117", email = "k.kiyama117@gmail.com"}]

[project.optional-dependencies]
tests = [
    "pytest",
    "ruff"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "dev"
python-packages = ["gaussian_job_shared"]
python-source = "python"

[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" }
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["gaussian-job-shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
