[project]
name = "gaussian_job_shared"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "kkiyama117", email = "k.kiyama117@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "ruff"]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
# manifest-path   = "rust/py_export/Cargo.toml"
module-name = "gaussian_job_shared._core"
profile = "dev"
python-packages = ["gaussian_job_shared"]
python-source = "python"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["gaussian-job-shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" }
]
